base/dpl-autoscale-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - http:
      paths:
      - path: /changeme
        backend:
          serviceName: svc
          servicePort: 8080
